Add analytics with department-costs endpoint and his docs
